Završena registracija
U sklopu forme registracija.html dodana je funkcionalnost uploada datoteka. Datoteke se dinamički povezuju s vrstama definiranim u bazi podataka i automatski pohranjuju kao BLOB objekti. Upload je postavljen kao obvezan uvjet za uspješnu registraciju. Također, ekran za pregled dokumenata je nadograđen prikazom kolone "Vrsta dokumenta" radi bolje preglednosti.